--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,26 +1,14 @@
 {
   "scopedRegistries": [
     {
-      "name": "Microsoft Mixed Reality",
-      "url": "https://pkgs.dev.azure.com/aipmr/MixedReality-Unity-Packages/_packaging/Unity-packages/npm/registry/",
-      "scopes": [
-        "com.microsoft.mixedreality",
-        "com.microsoft.spatialaudio"
-      ]
-    },
-    {
       "name": "Packages from jillejr",
-      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity/",
       "scopes": [
         "jillejr"
-      ]
+      ],
+      "url": "https:\/\/npm.cloudsmith.io\/jillejr\/newtonsoft-json-for-unity"
     }
   ],
   "dependencies": {
-    "com.microsoft.mixedreality.toolkit.examples": "2.5.1",
-    "com.microsoft.mixedreality.toolkit.extensions": "2.5.1",
-    "com.microsoft.mixedreality.toolkit.foundation": "2.5.1",
-    "com.microsoft.mixedreality.toolkit.tools": "2.5.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.6.1",
@@ -35,7 +23,6 @@
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.7",
-    "com.unity.xr.windowsmr.metro": "4.2.3",
     "jillejr.newtonsoft.json-for-unity": "12.0.301",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -67,6 +54,11 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.microsoft.mixedreality.toolkit.examples": "file:MixedReality\/com.microsoft.mixedreality.toolkit.examples-2.5.1.tgz",
+    "com.microsoft.mixedreality.toolkit.extensions": "file:MixedReality\/com.microsoft.mixedreality.toolkit.extensions-2.5.1.tgz",
+    "com.microsoft.mixedreality.toolkit.foundation": "file:MixedReality\/com.microsoft.mixedreality.toolkit.foundation-2.5.1.tgz",
+    "com.microsoft.mixedreality.toolkit.standardassets": "file:MixedReality\/com.microsoft.mixedreality.toolkit.standardassets-2.5.1.tgz",
+    "com.microsoft.mixedreality.toolkit.tools": "file:MixedReality\/com.microsoft.mixedreality.toolkit.tools-2.5.1.tgz"
   }
 }
